--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -192,7 +192,7 @@ Dissecting this example leads to the following technical requirements for implem
 \end{itemize}
 
 
-The basic intuition of our approach to meet these requirements is as follows: a separate process, called the \textit{Keep Alive Agent} (KAA) starts the debugger in the background and monitors the editor for changes to the source code. Whenever the programmer edits the code, the KAA attempts to recompile the code, and, if successful, hotswaps the current method into the debugger. It then queries the source code for annotations (either explicit annotations as in Java, or special comments) specifying the input arguments to the method. The KAA then sets a breakpoint on the first statement of the method, and invokes it. Since there is a breakpoint, the debugger halts. Using the common step-over facility of a typical debugger, the KAA then steps through the whole method until its execution completes. During this process however, the KAA takes snapshots of the current stack frame to record the values of local variables. These snapshots are stored in a data structure, called \textit{stack recording}, which supports displaying the values in the IDE, for instance, like in Figure~\ref{FIG:bret}, inline~\cite{LiveLit,ExampleBasedGraal}, or using some other UI affordance. 
+The basic intuition of our approach to meet these requirements is as follows: a separate process, called the \textit{Keep Alive Agent} (KAA) starts the debugger in the background and monitors the editor for changes to the source code. Whenever the programmer edits the code, the KAA attempts to recompile the code, and, if successful, hotswaps the current method into the debugger. It then queries the source code for annotations (either explicit annotations as in Java, or special comments) specifying the input arguments to the method. The KAA then sets a breakpoint on the first statement of the method, and invokes it. Since there is a breakpoint, the debugger halts. Using the common step-over facility of a typical debugger, the KAA then steps through the whole method until its execution completes. During this process however, the KAA takes snapshots of the current stack frame to record the values of local variables. These snapshots are stored in a data structure, called \textit{stack recording}, which supports displaying the values in the IDE, for instance, like in Figure~\ref{FIG:bret}, inline~\cite{LiveLiterals,ExampleBasedGraalVM}, or using some other UI affordance. 
 
 
 \begin{figure}[t]
