--- a/paper/reference.bib
+++ b/paper/reference.bib
@@ -6,6 +6,14 @@
   year   = {2013}
 }
 
+@unpublished{DebugMode,
+  author = {Gilad Bracha},
+  note   = {Online: \url{https://gbracha.blogspot.com/2012/11/debug-mode-is-only-mode.html}},
+  title  = {Debug Mode is the Only Mode},
+  year   = {2012}
+}
+
+
 @unpublished{InventingOnPrinciple,
   author = {Bret Victor},
   note   = {Online: \url{https://www.youtube.com/watch?v=PUv66718DII}},
