--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -140,7 +140,7 @@
   We have implemented live probes using stack recording natively for Java through the Java Debug Interface (JDI)~\cite{JDI}, and through the DAP for Java, Python, C, and Javascript, all with minimum glue code.  We evaluate the run-time performance of all four live probes prototypes, decomposed into: compile-after-change, hotswap, single step overhead, and stack recording overhead. Our results show that live probes on top of native debugger APIs are performant enough for interactive use. In the case of DAP, it depends on characteristics of the programming language. 
 
   % Why does this work matter?
-  \textit{Importance.} Live programming improves the programmer experience by providing immediate feedback about a program's execution and eliminating disruptive edit-compile-restart sequences. Live probes are one way to shorten the programmer feedback loop at the level of functions and methods. Although live probes are not new, and have been implemented in (prototype) systems, our approach of building live probes on top of existing and generic debugger protocols opens up live probes for a host of mainstream programming language, with minimum effort.
+  \textit{Importance.} Live programming improves the programmer experience by providing immediate feedback about a program's execution and eliminating disruptive edit-compile-restart sequences. Live probes are one way to shorten the programmer feedback loop at the level of functions and methods. Although live probes are not new, and have been implemented in (prototype) systems, our approach of building live probes on top of existing and generic debugger protocols opens up live probes for a host of mainstream programming languages, with minimum effort.
 \end{abstract}
 
 \section{Introduction}
@@ -192,14 +192,19 @@ Dissecting this example leads to the following technical requirements for implem
 \end{itemize}
 
 
-The basic intuition of our approach to meet these requirements is as follows: a separate process, called the \textit{Keep Alive Agent} (KAA) starts the debugger in the background and monitors the editor for changes to the source code. Whenever the programmer edits the code, the KAA attempts to recompile the code, and, if successful, hotswaps the current method into the debugger. It then queries the source code for annotations (either explicit annotations as in Java, or special comments) specifying the input arguments to the method. The KAA then sets a breakpoint on the first statement of the method, and invokes it. Since there is a breakpoint, the debugger halts. Using the common step-over facility of a typical debugger, the KAA then steps through the whole method until its execution completes. During this process however, the KAA takes snapshots of the current stack frame to record the values of local variables. These snapshots are stored in a data structure, called \textit{stack recording}, which supports displaying the values in the IDE, for instance, like in Figure~\ref{FIG:bret}, inline~\cite{LiveLiterals,ExampleBasedGraalVM}, or using some other UI affordance. 
+
+\textbf{TODO: FIX THIS:}
+The basic intuition of our approach to meet these requirements is as follows: the editor starts a debugger, not on the user program, but on a driver program called the Keep Alive Agent (KAA). This program consists of a while-true-loop, halted on a breakpoint, and is designed to service live probe requests, without having to restart the debugger (that would be too slow). When the code changes
+
+
+a separate process, called the \textit{Keep Alive Agent} (KAA) starts the debugger in the background and monitors the editor for changes to the source code. Whenever the programmer edits the code, the KAA attempts to recompile the code, and, if successful, hotswaps the current method into the debugger. It then queries the source code for annotations (either explicit annotations as in Java, or special comments) specifying the input arguments to the method. The KAA then sets a breakpoint on the first statement of the method, and invokes it. Since there is a breakpoint, the debugger halts. Using the common step-over facility of a typical debugger, the KAA then steps through the whole method until its execution completes. During this process however, the KAA takes snapshots of the current stack frame to record the values of local variables. These snapshots are stored in a data structure, called \textit{stack recording}, which supports displaying the values in the IDE, for instance, like in Figure~\ref{FIG:bret}, inline~\cite{LiveLiterals,ExampleBasedGraalVM}, or using some other UI affordance. 
 
 
 
 \begin{figure}[t]
   \centering
   \includegraphics[width=\textwidth]{img/bret}
-  \caption{Screenshot of Bret Victor's 2012 talk ``Inventing on Principle'' (23rd minute)}
+  \caption{Screenshot of Bret Victor's 2012 talk ``Inventing on Principle'' (23rd minute)~\cite{InventingOnPrinciple}}
   \label{FIG:bret}
 \end{figure}
 
