--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -185,19 +185,18 @@ What makes this \textit{live} is that while the programmer is editing the progra
 
 Dissecting this example leads to the following technical requirements for implementing live probes:
 \begin{itemize}
-  \item there should a way to specify the inputs to a method
-  \item after every change to the code, it needs to be recompiled and reexecuted
-  \item during execution the values of variables needs to be recorded and linked to source lines
-  \item the resulting history list of values needs to be communicated to the IDE
+  \item there should a way to specify the input arguments to a method (e.g., \lstinline{key} and \lstinline[language=c]{array});
+  \item after every change to the code, it needs to be recompiled and reexecuted;
+  \item during execution the values of variables needs to be recorded and linked to the source locations where they were updated.
+  \item the resulting history list of values needs to be communicated to the IDE for display to the user.
 \end{itemize}
 
+The basic intuition of our approach to meet these requirements is as follows: the editor starts a custom debugger (implemented against some debugger API), not on the user program, but on a driver program called the Keep Alive Agent (KAA). This program consists of a while-true-loop, halted on a breakpoint, and will be the verhicle for executing methods, without having to restart the debugger upon each request. 
 
+When the code changes, the editor communicates to the debugger to hotswap the code, and execute it with the input arguments extracted from the source code (based on some kind of annotation). The debugger, however, does not simply execute it, but simulates execution by issuing step-over commands until the method completes. To keep stack recording local to the current method, the debugger never steps \textit{into} a call to another method.
 
-\textbf{TODO: FIX THIS:}
-The basic intuition of our approach to meet these requirements is as follows: the editor starts a debugger, not on the user program, but on a driver program called the Keep Alive Agent (KAA). This program consists of a while-true-loop, halted on a breakpoint, and is designed to service live probe requests, without having to restart the debugger (that would be too slow). When the code changes
+In between steps, the debugger takes snapshots of the current stack frame to record the values of local variables.  These snapshots are stored in a data structure, called \textit{stack recording}, which supports displaying the values in the IDE, for instance, like in Figure~\ref{FIG:bret}, inline~\cite{LiveLiterals,ExampleBasedGraalVM}, or using some dedicated UI affordance. 
 
-
-a separate process, called the \textit{Keep Alive Agent} (KAA) starts the debugger in the background and monitors the editor for changes to the source code. Whenever the programmer edits the code, the KAA attempts to recompile the code, and, if successful, hotswaps the current method into the debugger. It then queries the source code for annotations (either explicit annotations as in Java, or special comments) specifying the input arguments to the method. The KAA then sets a breakpoint on the first statement of the method, and invokes it. Since there is a breakpoint, the debugger halts. Using the common step-over facility of a typical debugger, the KAA then steps through the whole method until its execution completes. During this process however, the KAA takes snapshots of the current stack frame to record the values of local variables. These snapshots are stored in a data structure, called \textit{stack recording}, which supports displaying the values in the IDE, for instance, like in Figure~\ref{FIG:bret}, inline~\cite{LiveLiterals,ExampleBasedGraalVM}, or using some other UI affordance. 
 
 
 
