--- a/paper/reference.bib
+++ b/paper/reference.bib
@@ -247,3 +247,19 @@ pages = {535–552},
 numpages = {18},
 keywords = {omniscient debugging, partial traces, scalability, specialized distributed database, execution traces, interface components}
 }
+
+@article{KABANOV201151,
+title = {JRebel Tool Demo},
+journal = {Electronic Notes in Theoretical Computer Science},
+volume = {264},
+number = {4},
+pages = {51-57},
+year = {2011},
+note = {Proceedings of the Fifth Workshop on Bytecode Semantics, Verification, Analysis and Transformation (Bytecode 2010)},
+issn = {1571-0661},
+doi = {https://doi.org/10.1016/j.entcs.2011.02.005},
+url = {https://www.sciencedirect.com/science/article/pii/S1571066111000429},
+author = {Jevgeni Kabanov},
+keywords = {bytecode, JRebel, ClassLoader, API, retroactive},
+abstract = {JRebel started as an academical project that became a successful commercial product used by thousands of developers worldwide. It extends the Java Virtual Machine with a mechanism that allows seamless class reloading. It uses bytecode manipulation extensively, both for the just-in-time class translator and numerous integrations with the Java SE and EE APIs. In this live demo we will show how it can be used in real-life projects to cut development time by 8 to 18 per cent.}
+}
