--- a/paper/reference.bib
+++ b/paper/reference.bib
@@ -13,6 +13,28 @@
   year   = {2012}
 }
 
+@inproceedings{Newspeak,
+  author       = {Gilad Bracha and
+                  Peter von der Ah{\'{e}} and
+                  Vassili Bykov and
+                  Yaron Kashai and
+                  William Maddox and
+                  Eliot Miranda},
+  editor       = {Theo D'Hondt},
+  title        = {Modules as Objects in Newspeak},
+  booktitle    = {{ECOOP} 2010 - Object-Oriented Programming, 24th European Conference,
+                  Maribor, Slovenia, June 21-25, 2010. Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {6183},
+  pages        = {405--428},
+  publisher    = {Springer},
+  year         = {2010},
+  doi          = {10.1007/978-3-642-14107-2\_20},
+  timestamp    = {Tue, 14 May 2019 10:00:54 +0200},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
 
 @unpublished{InventingOnPrinciple,
   author = {Bret Victor},
