--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -683,13 +683,13 @@ While our approach to implement live probes on top of off-the-shelf debuggers pr
 
 In our current approach, the programmer specifies input arguments to functions or methods using special comments in the code. This choice is motivated by the fact that it works in every programming language, does not require special UI affordances, and allows example data to be committed to version control systems. Nevertheless, while most primitive data types have a convenient, human readable literal notation, this can become cumbersome with complex, hetergeneous, structured data, such as arrays, objects, records, etc.  Moreover, these literal notations are language specific: how to specify a constant array in C, Java or Javascript is very different, and needs to be parsed into actual data values from their textual representation in the special comments. 
 
-Another challenge is most visible in the case of object-oriented languages, such as Java, where methods typically live in classes, and can only be invoked when an instance of a class is available. This means the programmer has to specify not just the input parameters, but also values for fields, or arguments to constructors, so that the live probe server can construct the object. This situation becomes worse if, e.g., the constructor depends on other objects as argument, which, in turn, require initialization, and so on.
+Another challenge is most visible in the case of object-oriented languages, such as Java, where methods typically live in classes, and can only be invoked when an instance of a class is available. This means the programmer has to specify not just the input parameters, but also values for fields, or arguments to constructors, so that the live probe server can construct the object. This situation becomes worse if, e.g., the constructor depends on other objects as argument, which, in turn, require initialization, and so on. At minimum, the live probe server could construct basic objects with default values for all constructor arguments, and let the programmer gradually modify improve the assignment using annotations. 
 
 The above problem of objects and initialization hints at a more basic and general question: how to obtain useful example data in the first place. In this paper we have assumed the programmer provides the data, but there are other strategies worth considering. For instance:
 \begin{itemize}
   \item As a base case, one could use default values for all arguments (e.g., \lstinline{0}, \lstinline{""}, \lstinline{null}, etc.). This has the drawback that such values might not lead to interesting probe displays. 
   \item Random value generation, as is employed in randomized testing, could be used to assign values to parameters. However, in this case it is unclear if it leads to the insight the programmer wants, and would be very confusing if the values would change in every iteration.
-  \item If a test suite is available, an off-line tool could observe frequently occurring values and objects passed into methods, through dynamic analysis of the test suite execution. Just like with random generation, however, the problem is to make the assignment stable somehow. 
+  \item If a test suite is available, an off-line tool could observe frequently occurring values and objects passed into methods, through dynamic analysis of the test suite execution. Such common values could also be harvested from production runs. Just like with random generation, however, the problem is to make the assignments stable somehow. 
 \end{itemize}
 The above strategies absolve the programmer from having to specify the example values, but potentially at the cost of reduced quality of feedback. Further research is needed to find an appropriate middle ground between full manual specification, and fully automatic techniques.
 
