--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -250,7 +250,8 @@ To meet these constraints, we propose the architecture shown in Figure \ref{fig:
 
 \begin{figure}[h]
   \centering
-  \begin{minipage}{0.2\textwidth}
+  \begin{minipage}{0.25\textwidth}
+    \centering
     \begin{lstlisting}[language=C]
 //foo(3)
 int foo(int n) {
@@ -264,74 +265,26 @@ int foo(int n) {
   \end{minipage}
   \hfill
   \begin{minipage}{0.7\textwidth}
-    \begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1.1,xscale=0.95]
-      
-%Shape: Rectangle [id:dp48530454252997635] 
-\draw   (11,13.3) -- (68.6,13.3) -- (68.6,34.5) -- (11,34.5) -- cycle ;
-%Shape: Rectangle [id:dp4741172814816692] 
-\draw   (11,34.5) -- (68.6,34.5) -- (68.6,89.7) -- (11,89.7) -- cycle ;
-%Shape: Rectangle [id:dp39333640528563685] 
-\draw   (83.8,13.3) -- (141.4,13.3) -- (141.4,34.5) -- (83.8,34.5) -- cycle ;
-%Shape: Rectangle [id:dp852338699133017] 
-\draw   (83.8,34.5) -- (141.4,34.5) -- (141.4,89.7) -- (83.8,89.7) -- cycle ;
-%Shape: Rectangle [id:dp7978026394194542] 
-\draw   (155.6,13.3) -- (213.2,13.3) -- (213.2,34.5) -- (155.6,34.5) -- cycle ;
-%Shape: Rectangle [id:dp7423976709217543] 
-\draw   (155.6,34.5) -- (213.2,34.5) -- (213.2,89.7) -- (155.6,89.7) -- cycle ;
-%Shape: Rectangle [id:dp7923849318907303] 
-\draw   (225.8,13.7) -- (283.4,13.7) -- (283.4,34.9) -- (225.8,34.9) -- cycle ;
-%Shape: Rectangle [id:dp8325747263531937] 
-\draw   (225.8,34.9) -- (283.4,34.9) -- (283.4,90.1) -- (225.8,90.1) -- cycle ;
-%Shape: Rectangle [id:dp3066063334990279] 
-\draw   (343,14.1) -- (400.6,14.1) -- (400.6,35.3) -- (343,35.3) -- cycle ;
-%Shape: Rectangle [id:dp9425547748588214] 
-\draw   (343,35.3) -- (400.6,35.3) -- (400.6,90.5) -- (343,90.5) -- cycle ;
-%Straight Lines [id:da5537198175803346] 
-\draw    (69.4,56.1) -- (80,56.1) ;
-\draw [shift={(83,56.1)}, rotate = 180] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (7.14,-3.43) -- (0,0) -- (7.14,3.43) -- cycle    ;
-%Straight Lines [id:da9992180079914922] 
-\draw    (141.4,56.1) -- (152,56.1) ;
-\draw [shift={(155,56.1)}, rotate = 180] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (7.14,-3.43) -- (0,0) -- (7.14,3.43) -- cycle    ;
-%Straight Lines [id:da24526356738515775] 
-\draw    (212.4,56.1) -- (223,56.1) ;
-\draw [shift={(226,56.1)}, rotate = 180] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (7.14,-3.43) -- (0,0) -- (7.14,3.43) -- cycle    ;
-%Straight Lines [id:da7346663349503276] 
-\draw [line width=1.25, dashed]    (284.4,56.1) -- (337.6,56.47) ;
-\draw [shift={(341.6,56.5)}, rotate = 180.4] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (9.29,-4.46) -- (0,0) -- (9.29,4.46) -- cycle    ;
-
-% Text Node
-\draw (15.2,17) node [anchor=north west][inner sep=0.75pt]   [align=left] {line : 3};
-% Text Node
-\draw (22.4,39) node [anchor=north west][inner sep=0.75pt]   [align=left] {n : 3};
-% Text Node
-\draw (88,17) node [anchor=north west][inner sep=0.75pt]   [align=left] {line : 4};
-% Text Node
-\draw (95.2,39) node [anchor=north west][inner sep=0.75pt]   [align=left] {n : 3};
-% Text Node
-\draw (94.8,53.2) node [anchor=north west][inner sep=0.75pt]   [align=left] {i \ : 0};
-% Text Node
-\draw (159.8,17) node [anchor=north west][inner sep=0.75pt]   [align=left] {line : 5};
-% Text Node
-\draw (167,39) node [anchor=north west][inner sep=0.75pt]   [align=left] {n : 3};
-% Text Node
-\draw (166.6,53.2) node [anchor=north west][inner sep=0.75pt]   [align=left] {i \ : 0};
-% Text Node
-\draw (230,17) node [anchor=north west][inner sep=0.75pt]   [align=left] {line : 4};
-% Text Node
-\draw (237.2,39) node [anchor=north west][inner sep=0.75pt]   [align=left] {n : 3};
-% Text Node
-\draw (236.8,53.6) node [anchor=north west][inner sep=0.75pt]   [align=left] {i \ : 1};
-% Text Node
-\draw (347.2,17) node [anchor=north west][inner sep=0.75pt]   [align=left] {line : 7};
-% Text Node
-\draw (354.4,39) node [anchor=north west][inner sep=0.75pt]   [align=left] {n : 3};
-% Text Node
-\draw (354,54) node [anchor=north west][inner sep=0.75pt]   [align=left] {i \ : 2};
-    \end{tikzpicture}
+    \centering
+    \includegraphics[width=0.8\linewidth]{img/stackrecording_chain.png}
   \end{minipage}
   \caption{Stack Recording Example}
   \label{fig:stack-recording}
 \end{figure}
+
+\begin{table}[ht]
+  \centering
+  \begin{tabular}{|c|c|c|c|c|}
+  \hline
+      \textbf{Line 3} & \textbf{Line 4} & \textbf{Line 5} & \textbf{Line 7} & \textbf{Line 8} \\ \hline
+      n=3 & n=3;i=0 & n=3;i=0 & ~ & ~ \\ \hline
+      ~ & n=3;i=1 & n=3;i=1 & ~ & ~ \\ \hline
+      ~ & n=3;i=2 & n=3;i=2 & ~ & ~ \\ \hline
+      ~ & n=3;i=3 & ~ & n=3;i=3 & return 3 \\ \hline
+  \end{tabular}
+  \label{tab:stack-recording}
+  \caption{Stack Recording Example 2}
+\end{table}
 
 In order to generate the data needed to probe a variable, we need to be able to retrieve the state of the variable during execution. 
 This information is contained in the stackframe at the time of execution. 
@@ -362,14 +315,17 @@ Between each step, the state of the stackframe is recorded along with the source
 \begin{figure}[htbp]
   \centering
   \begin{lstlisting}[language=Java]
-public class Debugger{
-  Debugger(){
-    setBreakpointOnWhileTrue();
-    launchVM(KeepeAliveAgent);
+public class LiveProbesServer{
+  LiveProbesServer()
+    this.kaa = new KeepAliveAgent();
   }
-  public void loadClass(classPath, className){
-    addClassPathToDynamicClassLoader(classPath);
-    loadClass(className);
+
+  public void run(){
+    setBreakpointOnWhileTrue();
+    launchVM(kaa);
+  }
+  public void loadClass(className){
+    kaa.loadClass(className);
   }
 
   public StackRecording execute(method, arguments){
@@ -385,7 +341,7 @@ public class Debugger{
   }
 }
   \end{lstlisting}
-  \caption{JDI Debugger classes}
+  \caption{Live Probes Server ?}
   \label{fig:debugger-class}
 \end{figure}
 
@@ -460,6 +416,22 @@ These methods depend on both the implementation of the debugging server and the 
     \end{tabularx}
     \caption{Implementation differences between languages}
     \label{tab:implementation-differences}
+\end{table}
+
+\begin{table}[!ht]
+  \centering
+  \begin{tabular}{|l|l|l|}
+  \hline
+      \textbf{} & SLOC Live Probe Server & SLOC KAA \\ \hline
+      \textbf{Java JDI} & 592 (Java) & 15 (Java) \\ \hline
+      \textbf{DAP Base} & 267 (Python) & ~ \\ \hline
+      \textbf{DAP Java} & 352 (Python) & 91 (Java) \\ \hline
+      \textbf{DAP Python} & 142 (Python) & 26(Python) \\ \hline
+      \textbf{DAP Javascript} & 257 (Python) & 24(Javascript) \\ \hline
+      \textbf{DAP C} & 188 (Python) & 14(C) \\ \hline
+  \end{tabular}
+  \caption{SLOC of the Live Probe Server and Keep Alive Agent (To update after new Java changes)}
+  \label{tab:sloc}
 \end{table}
 
 With DAP, the compilation step is performed by calling a command line compilation tool (javac and gcc). For the JDI version, developed in Java, the Java compilation API has been used for better performance.
@@ -548,26 +520,17 @@ The data shows that the loading time remains constant concerning the number of l
 
 \begin{figure}[htbp]
   \centering
-  \begin{subfigure}[b]{0.45\textwidth}
-      \centering
-      \includegraphics[width=\textwidth]{img/execute.png}
-      \caption{\centering Total execution time}
-      \label{subfig:execute-time-total}
-  \end{subfigure}
-  \hfill
-  \begin{subfigure}[b]{0.45\textwidth}
-      \centering
-      \includegraphics[width=\textwidth]{img/execute_ps.png}
-      \caption{\centering Execution time per step}
-      \label{subfig:execute-time-ps}
-  \end{subfigure}
+  \includegraphics[width=\textwidth]{img/execute.png}
   \caption{Execution time in seconds depending on the number of steps.}
   \label{fig:execute-time}
 \end{figure}
 
-Subsequently, we proceeded to evaluate the execution time concerning the number of steps in the debugger. 
-Figure \ref{subfig:execute-time-total} presents the total time taken based on the number of steps during stack recording, while Figure \ref{subfig:execute-time-ps} demonstrates the time per step as a function of the number of steps. 
-Notably, the execution time exhibits a linear relationship with the number of steps in the method.
+Next, we evaluated the execution time as a function of the number of steps in the debugger. 
+Figure \ref{fig:execute-time} shows the total time taken as a function of the number of steps during stack registration.
+Note that the execution time shows a linear relationship with the number of steps in the method. 
+In fact, for each implementation we obtain a constant time for each stack frame recorded, corresponding to the time taken to obtain the state of the stack frame and the time taken for the debugger to perform a step. 
+The difference in time between the different DAP languages is explained by the implementation of the debug server. 
+With C, the debug server is a simple wrapper around gdb, which has very good performance.
 
 \subsubsection{What is the average performance during a live programming session?}
 
